# sokol-tools

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.zig  build_docker.sh  fibs  fibs.cmd  fibs.ts  fips.yml
.github/workflows/: build.yml  deploy.yml  main.yml
docker/: Dockerfile  build.sh
docs/: sokol-shdc.md
ext/: CMakeLists.txt  glslang_osdependent_wasi.cc
fips-files/verbs/: run_tests.py
scripts/: extract-rom-fonts.py
src/: CMakeLists.txt
src/shdc/: CMakeLists.txt  args.cc  args.h  bare.cc  bytecode.cc  bytecode.h  cross.cc  error.cc  header.cc  input.cc  input.h  main.cc  output.cc  output_bare.cc  output_sokol.cc  output_sokolzig.cc  reflection.cc  reflection.h  shdc.h  sokol.cc  sokold.cc  sokolnim.cc  sokolodin.cc  sokolrust.cc  sokolzig.cc  spirv.cc  spirv.h  spirvcross.cc  spirvcross.h  types.h  util.cc  util.h  wgsl.cc  yaml.cc
src/shdc/formats/: bare.cc  bare.h  sokol.cc  sokol.h  sokolnim.cc  sokolnim.h  sokolodin.cc  sokolodin.h  sokolrust.cc  sokolrust.h  sokolzig.cc  sokolzig.h  util.cc  util.h  yaml.cc  yaml.h
src/shdc/generators/: bare.cc  bare.h  generate.cc  generate.h  util.h  (+25 more)
test/: chipvis.glsl  compute.glsl  fontstash.glsl  imgui.glsl  infinity.glsl  inout_mismatch.glsl  issue197_complex.glsl  issue197_simple.glsl  issue213_unused_ub.glsl  issue_104.glsl  issue_109.glsl  issue_141.glsl  issue_86.glsl  sgl.glsl  shadows.glsl  shared_ub.glsl  ssbo.glsl  test1.glsl  test1_pragma.glsl  test_nim.glsl  texcube-sapp.glsl  ub_equality_1.glsl  ub_equality_2.glsl  uniform_types.glsl  unused_vertex_attr.glsl
test/sapp/: shadows-depthtex-sapp.glsl
(+54 files in other folders)
